fixed overlap issue on mobile

--- a/assets/css/zz_master.styl
+++ b/assets/css/zz_master.styl
@@ -845,6 +845,8 @@ body
 			z-index 3
 			padding 25px
 			color $white
+	.move-up
+		transform: translate(0px, 0px);
 	footer
 		padding 0px 0px 50px 0px
 		.mt--3
